<resources>
    <string name="app_name">Tracksaction</string>
    <string name="tab_page1">Date</string>
    <string name="tab_page2">Transaction</string>
    <string name="tab_page3">Stored</string>
    <string name="btc">BTC</string>
    <string name="quantity">Quantity</string>
    <string name="from">From</string>
    <string name="price_per_unit">Price Per Unit</string>
    <string name="date">Date</string>
    <string name="to">To</string>
    <string name="eth">ETH</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="id">ID</string>
    <string name="_100_00">100.00</string>
    <string name="_5">5</string>
</resources>