<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFromTicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFromPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from" />

            <TextView
                android:id="@+id/txtFromQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtToTicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtToPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <TextView
                android:id="@+id/txtToQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>